# tfmnist

./: CMakeLists.txt  coco_classes.h  detect.py  main.cpp  model.onnx
mnist_saved_model/: saved_model.pb
mnist_saved_model/variables/: variables.data-00000-of-00001  variables.index
